@@ -1,3 +1,7 @@
+Tue Oct 18 01:24:24 PDT 2011
+        * Add regexp-based number matching (to use, compile as following:
+          make DEFS=-DUSE_REGEXP
+
 Wed Aug 31 04:05:41 PDT 2011
         * Allow parsing pcap files with DLT_LINUX_SLL (113) interface type
 
